--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "babel-runtime": "^6.11.6",
     "copy-webpack-plugin": "^3.0.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "html-webpack-plugin": "^2.28.0"
   },
   "scripts": {
     "build": "webpack",
     "watch": "browser-sync start --server --files 'dist/*.*'",
-    "dev": "webpack-dev-server --devtool eval-source-map --progress --colors --hot --inline --content-base ./dist"
+    "dev":   "webpack-dev-server --devtool eval-source-map --progress --colors --hot --inline"
   },
   "repository": {
     "type": "git",
